add .gitignore fix maxpage result for paginator fix border size on mouse over

--- a/app/Resources/views/vote/index.html.twig
+++ b/app/Resources/views/vote/index.html.twig
@@ -27,7 +27,7 @@
                 <div class="media">
                     <div class="media-left">
                         <a href="#">
-                            <img class="media-object"
+                            <img class="media-object padding2"
                                  src="{{ upload_directory }}/{{ sock.picture }}"
                                  alt="{{ sock.picture }}"
                             />
